--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -23,8 +23,7 @@ jobs:
         run: flutter pub get
 
       - name: Analyze
-        run: |
-          flutter analyze || true   # warning은 무시하고 계속 진행
+        run: flutter analyze || true   # warning은 무시하고 계속 진행
 
-      - name: Run tests
-        run: flutter test
+      - name: Run tests (Web)
+        run: flutter test --platform chrome
